checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000450018.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#37: 
> include/linux/kexec.h:148: error: variable-size type declared outside of any function

WARNING:TYPO_SPELLING: 'alocated' may be misspelled - perhaps 'allocated'?
#61: 
another if they ended up being alocated sequentially by kmalloc,
                               ^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:BAD_SIGN_OFF: Use a single space after Acked-by:
#73: 
Acked-by:  Vivek Goyal <vgoyal@in.ibm.com>

The signed-off-by line does not fall in line with the standards
specified by the community.

See: https://www.kernel.org/doc/html/latest/process/submitting-patches.html#developer-s-certificate-of-origin-1-1

ERROR:SPACING: space prohibited after that open parenthesis '('
#119: FILE: include/linux/kexec.h:39:
+#define KEXEC_NOTE_BYTES ( (KEXEC_NOTE_HEAD_BYTES * 2) + \

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

ERROR:SPACING: space prohibited before that close parenthesis ')'
#120: FILE: include/linux/kexec.h:40:
+			   KEXEC_NOTE_NAME_BYTES + KEXEC_NOTE_DESC_BYTES )

CHECK:SPACING: spaces preferred around that '/' (ctx:VxV)
#130: FILE: include/linux/kexec.h:147:
+typedef u32 note_buf_t[KEXEC_NOTE_BYTES/4];
                                        ^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000450018.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 2 errors, 3 warnings, 1 checks, 92 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000450018.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
